Add example of coverage, ajax-mocking, method mocking and dom fixtures.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ npm-debug.log
 dojo-workspace/*
 !dojo-workspace/README.md
 !dojo-workspace/practice-template
+.bower.json
+
+dojo-workspace/practice-template/coverage/
+dojo-workspace/practice-template/bower_components/
